--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,16 @@ header h1 {
     margin: 0;
 }
 
+.logo-title {
+    display: flex;
+    align-items: center;
+}
+
+.logo-title img {
+    height: 40px;
+    margin-right: 0.8rem;
+}
+
 nav ul {
     list-style: none;
     display: flex;
